Bug 1285098 - fix memory leak in nsImapServerResponseParser.cpp (coverity issue). r=aceman